--- a/orderSummaryCard/index.html
+++ b/orderSummaryCard/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="stylesheet" href="styles.css" />
+
     <link
       rel="icon"
       type="image/png"
@@ -26,15 +28,24 @@
     </style>
   </head>
   <body>
-    Order Summary You can now listen to millions of songs, audiobooks, and
-    podcasts on any device anywhere you like! Annual Plan $59.99/year Change
-    Proceed to Payment Cancel Order
+    <h2>Order Summary</h2>
+    <p>
+      You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!
+    </p>
+    <div>
+      <h4>Annual Plan</h4>
+      <p>$59.99/year</p>
+      <a href="#">Change</a>
+    </div>
+    <div>Proceed to Payment</div>
+    <div>Cancel Order</div>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Juan Rosales</a>.
     </div>
   </body>
 </html>
