--- a/orderSummaryCard/index.html
+++ b/orderSummaryCard/index.html
@@ -28,18 +28,26 @@
     </style>
   </head>
   <body>
-    <h2>Order Summary</h2>
-    <p>
-      You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like!
-    </p>
-    <div>
-      <h4>Annual Plan</h4>
-      <p>$59.99/year</p>
-      <a href="#">Change</a>
-    </div>
-    <div>Proceed to Payment</div>
-    <div>Cancel Order</div>
+    <img src="./images/pattern-background-desktop.svg" alt="" />
+
+    <main>
+      <img src="./images/illustration-hero.svg" alt="" />
+      <h2>Order Summary</h2>
+      <p>
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+      <div>
+        <img src="./images/icon-music.svg" alt="" />
+        <h4>Annual Plan</h4>
+        <p>$59.99/year</p>
+        <a href="#">Change</a>
+      </div>
+
+      <!--  Think about using button tag instead of a tag.  -->
+      <div><a class="goToPayment" href="#">Proceed to Payment</a></div>
+      <div><a class="cancelOrder" href="#">Cancel Order</a></div>
+    </main>
 
     <div class="attribution">
       Challenge by
