--- a/orderSummaryCard/index.html
+++ b/orderSummaryCard/index.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
-    <link rel="stylesheet" href="styles.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
 
-    <title>Frontend Mentor | Order summary card</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    <!--    Background image of entire app    
+  <title>Frontend Mentor | Order summary card</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+</head>
+
+<body>
+  <!--    Background image of entire app    
     <img src="./images/pattern-background-desktop.svg" alt="" /> -->
 
-    <!--    Order Summary Card    -->
-    <main>
-      <img src="./images/illustration-hero.svg" alt="" />
-      <h2>Order Summary</h2>
-      <p>
-        You can now listen to millions of songs, audiobooks, and podcasts on any
-        device anywhere you like!
-      </p>
+  <!--    Order Summary Card    -->
+  <main>
+    <img src="./images/illustration-hero.svg" alt="" />
+    <h2>Order Summary</h2>
+    <p>
+      You can now listen to millions of songs, audiobooks, and podcasts on any
+      device anywhere you like!
+    </p>
 
-      <!--    Selected Plan   -->
-      <div class="choosenPlan">
-        <img src="./images/icon-music.svg" alt="" />
-        <div>
-          <h4>Annual Plan</h4>
-          <p>$59.99/year</p>
-        </div>
-        <a href="#">Change</a>
+    <!--    Selected Plan   -->
+    <div class="choosenPlan">
+      <img src="./images/icon-music.svg" alt="" />
+      <div>
+        <h4>Annual Plan</h4>
+        <p>$59.99/year</p>
       </div>
-
-      <!--  Think about using button tag instead of a tag.  -->
-      <div class="pay">
-        <a class="goToPayment" href="#">Proceed to Payment</a>
-      </div>
-      <div class="cancel"><a class="cancelOrder" href="#">Cancel Order</a></div>
-    </main>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Juan Rosales</a>.
+      <a href="#">Change</a>
     </div>
-  </body>
+
+    <!--  Think about using button tag instead of a tag.  -->
+    <div class="pay">
+      <a class="goToPayment" href="#">Proceed to Payment</a>
+    </div>
+    <div class="cancel"><a class="cancelOrder" href="#">Cancel Order</a></div>
+  </main>
+
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Juan
+      Rosales</a>.
+  </div>
+</body>
+
 </html>
